fix overflow

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&family=Quicksand:wght@300..700&display=swap');
 
+html,
+body {
+  max-width: 100vw;
+  overflow-x: hidden;
+}
+
 body {
   font-family: 'Quicksand', sans-serif;
   font-weight: 500;
